PIP-730 Use concepts lookup instead of prefetching member of query for dotted ECL